# rules_microchip

./: .gitignore  README.md  WORKSPACE  deps.bzl  install_and_package_xc32.sh
toolchain/xc32/: BUILD.bazel  xc32_cc_toolchain_config.bzl
toolchain/xc32/wrappers/: xc32-ar  xc32-g++
